objects/Opportunity_Lead__c.object
<CustomObject>
    <description>This object tracks the Lead associated to Opportunity</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Target_List__r.End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign_Event_Name__c</fullName>
        <formula>Target_List__r.Lead_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Campaign/Event Name`</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Status__c</fullName>
        <label>Opportunity / Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Stock Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Write Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Credit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case is Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Credit Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Loan Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Loan Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities / Leads</relationshipLabel>
        <relationshipName>Opportunities_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personalised_Message__c</fullName>
        <formula>Target_List__r.Personalised_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personalised Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Target_List__r.Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Target_List__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <formula>TEXT(Target_List__r.Lead_Campaign__r.Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_List__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Target List</label>
        <referenceTo>Target_List__c</referenceTo>
        <relationshipLabel>Opportunities / Leads</relationshipLabel>
        <relationshipName>Opportunities_Leads</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Target_List__r.Lead_Type__c</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Opportunity / Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Leads</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Lead_Campaign_Event_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Target_List__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities/Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_BIU</group>
            <group>SME_Sales_Management</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities / Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_need_to_be_the_same_account</fullName>
        <active>true</active>
        <errorConditionFormula>Target_List__r.CIS_ID_Prospect_Name__r.Id  &lt;&gt;  Opportunity__r.Account.Id</errorConditionFormula>
        <errorDisplayField>Target_List__c</errorDisplayField>
        <errorMessage>Opportunity Account and Lead need to be the same account</errorMessage>
    </validationRules>
</CustomObject>